restored coming soon

--- a/static/index.html
+++ b/static/index.html
@@ -50,15 +50,14 @@
 
   <div id="container">
     <header>
-      Open Building Codes Header
+    Open Building Codes
     </header>
     
     <div id="main">
-      Open Building Codes Main Div
+        Coming Soon...
     </div>
     
     <footer>
-      Open Building Codes Footer
     </footer>
   </div> <!--! end of #container -->
 
